--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "professionait-website-workspace",
+  "name": "PROFESSIONALTWEBSITEANGULAR",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:professionait-website-workspace": "node dist/professionait-website-workspace/server/server.mjs"
+    "serve:ssr:ProfessionalITWebSiteAngular": "node dist/ProfessionalITWebSiteAngular/server/server.mjs"
   },
   "prettier": {
     "overrides": [
@@ -31,9 +31,11 @@
     "@angular/ssr": "^20.1.3",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^20.1.3",
     "@angular/build": "^20.1.3",
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.0",
